labs/day-21-ingress-deep-dive/adv-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: advanced-app
  name: advanced-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: advanced-app
  strategy: {}
  template:
    metadata:
      labels:
        app: advanced-app
    spec:
      containers:
      - image: nginx:1.25
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
