labs/day-21-ingress-deep-dive/app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app1
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  strategy: {}
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - image: nginx:1.25
        name: nginx
        ports:
        - containerPort: 80  
        resources: {}
status: {}
