labs/day-21-ingress-deep-dive/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: host-app2
  name: host-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: host-app2
  strategy: {}
  template:
    metadata:
      labels:
        app: host-app2
    spec:
      containers:
      - image: nginx:1.25
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
