labs/day-21-ingress-deep-dive/broken-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: broken-app
  name: broken-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broken-app
  strategy: {}
  template:
    metadata:
      labels:
        app: broken-app
    spec:
      containers:
      - image: nginx.1.25
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
