labs/day-21-ingress-deep-dive/adv-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: advanced-app-service
  name: advanced-app-service
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: advanced-app-service
  type: ClusterIP
status:
  loadBalancer: {}
