labs/day-21-ingress-deep-dive/broken-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: broken-app-service
  name: broken-app-service
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wrong-label
  type: ClusterIP
status:
  loadBalancer: {}
