labs/day-21-ingress-deep-dive/svc1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: host-app1-service
  name: host-app1-service
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: host-app1
  type: ClusterIP
status:
  loadBalancer: {}
