labs/day-21-ingress-deep-dive/svc2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: host-app2-service
  name: host-app2-service
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: host-app2
  type: ClusterIP
status:
  loadBalancer: {}
