labs/day-21-ingress-deep-dive/adv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: advanced-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: advanced-app-service
            port:
              number: 80
        path: /app1
        pathType: Prefix
status:
  loadBalancer: {}
