labs/day-21-ingress-deep-dive/broken-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: broken-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: broken-app-service
            port:
              number: 80
        path: /app1
        pathType: Prefix
status:
  loadBalancer: {}
